[tool.poetry]
name = "taxi_demand_predictor"
version = "0.1.0"
description = ""
authors = ["Jarome Leslie <jaromeleslie@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
requests = "^2.31.0"
pyarrow = "^15.0.0"
tqdm = "^4.66.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
